# websocket1c

./: .gitignore  Cargo.toml  MANIFEST.XML  Makefile.toml  Manifest.xml  README.md
.cargo/: config.toml
src/: lib.rs  websocket1c.rs
