[package]
name = "websocket1c"
version = "0.1.3"
edition = "2021"
authors = ["Dmitrii Liubanevich"]

[dependencies]
utf16_lit = "2.0"
addin1c = "0.7"
tokio = { version = "1.43", features = ["rt-multi-thread", "time"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1
